--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-snappy": "^0.4.1",
         "fideloper/proxy": "^4.0",
+        "h4cc/wkhtmltopdf-amd64": "^0.12.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.6"
+        "laravelcollective/html": "^5.6",
+        "yajra/laravel-datatables-buttons": "^3.2",
+        "yajra/laravel-datatables-oracle": "^8.6"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
