--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "^4.0",
         "h4cc/wkhtmltopdf-amd64": "^0.12.4",
         "laravel/framework": "5.6.*",
+        "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6",
         "yajra/laravel-datatables-buttons": "^3.2",
